Crash: Driver copy / paste between lights Energy property followed by frame change #64387

Closed
opened 2019-05-09 13:40:58 +02:00 by Ian Finnimore · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74
Worked: (optional)

Short description of error
EEVEE Engine
After copying a driver from one light "energy" property to a second light energy property, changing frames causes crash.

Note: If after copy/paste .blend is saved, app closed and reopened and file reloaded, now frame change does not crash app.

Exact steps for others to reproduce the error
Open attached DrivenEnergy1.blend
Copy driver from Light Power property
Select Light.001
Paste drive into Light Power property
Change current frame (arrow right is enough)
App Crashes.

blender_debug_output.txt

blender_system_info.txt

DrivenEnergy1.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: `3dc9da3a74` Worked: (optional) **Short description of error** EEVEE Engine After copying a driver from one light "energy" property to a second light energy property, changing frames causes crash. Note: If after copy/paste .blend is saved, app closed and reopened and file reloaded, now frame change does not crash app. **Exact steps for others to reproduce the error** Open attached DrivenEnergy1.blend Copy driver from Light Power property Select Light.001 Paste drive into Light Power property Change current frame (arrow right is enough) App Crashes. [blender_debug_output.txt](https://archive.blender.org/developer/F7020793/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F7020794/blender_system_info.txt) [DrivenEnergy1.blend](https://archive.blender.org/developer/F7020795/DrivenEnergy1.blend)
Author

Added subscriber: @IanFinn

Added subscriber: @IanFinn

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-05-10 14:36:56 +02:00

Backtrace:

Thread 29 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd7ffb700 (LWP 9575)]
0x0000555557ddd005 in BKE_animsys_eval_driver (depsgraph=0x7fffe671a408, id=0x7fffe544e488, driver_index=0, driver_orig=0x7fffd2f04788)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/anim_sys.c:4079
4079	  if (adt->driver_array) {
(gdb) bt
#0  0x0000555557ddd005 in BKE_animsys_eval_driver (depsgraph=0x7fffe671a408, id=0x7fffe544e488, driver_index=0, driver_orig=0x7fffd2f04788)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/anim_sys.c:4079
#1  0x0000555557f8f12f in std::__invoke_impl<void, void (*&)(Depsgraph*, ID*, int, ChannelDriver*), Depsgraph*, ID*&, int&, ChannelDriver*&> (__f=
    @0x7fffe57ebda0: 0x555557ddcfb2 <BKE_animsys_eval_driver>, __args#0=@0x7fffd7ffab10: 0x7fffe671a408, __args#1=@0x7fffe57ebdb8: 0x7fffe544e488,
    __args#2=@0x7fffe57ebdb0: 0, __args#3=@0x7fffe57ebda8: 0x7fffd2f04788) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60
#2  0x0000555557f8dad2 in std::__invoke<void (*&)(Depsgraph*, ID*, int, ChannelDriver*), Depsgraph*, ID*&, int&, ChannelDriver*&> (__fn=
    @0x7fffe57ebda0: 0x555557ddcfb2 <BKE_animsys_eval_driver>, __args#0=@0x7fffd7ffab10: 0x7fffe671a408, __args#1=@0x7fffe57ebdb8: 0x7fffe544e488,
    __args#2=@0x7fffe57ebdb0: 0, __args#3=@0x7fffe57ebda8: 0x7fffd2f04788) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95
#3  0x0000555557f8c1cf in std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul, 3ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul>) (this=0x7fffe57ebda0, __args=...)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400
- 4  0x0000555557f89f90 in std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffe57ebda0, __args#0=@0x7fffd7ffab10: 0x7fffe671a408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484
- 5  0x0000555557f86cc4 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd7ffab10: 0x7fffe671a408)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297
#6  0x0000555557fa336f in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffd08ede40, __args#0=0x7fffe671a408)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687
#7  0x0000555557fa290d in DEG::deg_task_run_func (pool=0x7fffdbe4e008, taskdata=0x7fffd08eddc8, thread_id=5)
    at /home/zed/prog/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:86
- 8  0x0000555557f14616 in task_scheduler_thread_run (thread_p=0x7fffdbdd28f8) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:438
- 9  0x00007ffff3411443 in start_thread () from /lib64/libpthread.so.0
#10 0x00007ffff333b5af in clone () from /lib64/libc.so.6
Backtrace: ``` Thread 29 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffd7ffb700 (LWP 9575)] 0x0000555557ddd005 in BKE_animsys_eval_driver (depsgraph=0x7fffe671a408, id=0x7fffe544e488, driver_index=0, driver_orig=0x7fffd2f04788) at /home/zed/prog/blender/source/blender/blenkernel/intern/anim_sys.c:4079 4079 if (adt->driver_array) { (gdb) bt #0 0x0000555557ddd005 in BKE_animsys_eval_driver (depsgraph=0x7fffe671a408, id=0x7fffe544e488, driver_index=0, driver_orig=0x7fffd2f04788) at /home/zed/prog/blender/source/blender/blenkernel/intern/anim_sys.c:4079 #1 0x0000555557f8f12f in std::__invoke_impl<void, void (*&)(Depsgraph*, ID*, int, ChannelDriver*), Depsgraph*, ID*&, int&, ChannelDriver*&> (__f= @0x7fffe57ebda0: 0x555557ddcfb2 <BKE_animsys_eval_driver>, __args#0=@0x7fffd7ffab10: 0x7fffe671a408, __args#1=@0x7fffe57ebdb8: 0x7fffe544e488, __args#2=@0x7fffe57ebdb0: 0, __args#3=@0x7fffe57ebda8: 0x7fffd2f04788) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60 #2 0x0000555557f8dad2 in std::__invoke<void (*&)(Depsgraph*, ID*, int, ChannelDriver*), Depsgraph*, ID*&, int&, ChannelDriver*&> (__fn= @0x7fffe57ebda0: 0x555557ddcfb2 <BKE_animsys_eval_driver>, __args#0=@0x7fffd7ffab10: 0x7fffe671a408, __args#1=@0x7fffe57ebdb8: 0x7fffe544e488, __args#2=@0x7fffe57ebdb0: 0, __args#3=@0x7fffe57ebda8: 0x7fffd2f04788) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95 #3 0x0000555557f8c1cf in std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul, 3ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul>) (this=0x7fffe57ebda0, __args=...) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400 - 4 0x0000555557f89f90 in std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffe57ebda0, __args#0=@0x7fffd7ffab10: 0x7fffe671a408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484 - 5 0x0000555557f86cc4 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, ID*, int, ChannelDriver*))(Depsgraph*, ID*, int, ChannelDriver*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd7ffab10: 0x7fffe671a408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297 #6 0x0000555557fa336f in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffd08ede40, __args#0=0x7fffe671a408) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687 #7 0x0000555557fa290d in DEG::deg_task_run_func (pool=0x7fffdbe4e008, taskdata=0x7fffd08eddc8, thread_id=5) at /home/zed/prog/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:86 - 8 0x0000555557f14616 in task_scheduler_thread_run (thread_p=0x7fffdbdd28f8) at /home/zed/prog/blender/source/blender/blenlib/intern/task.c:438 - 9 0x00007ffff3411443 in start_thread () from /lib64/libpthread.so.0 #10 0x00007ffff333b5af in clone () from /lib64/libc.so.6 ```

This issue was referenced by 1c1e3de015

This issue was referenced by 1c1e3de0156dadd65adb7dda2e5e85650478dffb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64387
No description provided.